--- a/S1/RP/TP1-SOKOBAN/main/images/readme
+++ b/S1/RP/TP1-SOKOBAN/main/images/readme
@@ -1,1 +1,2 @@
-this folder contains all used images on the interface + a zip folder that contains even more images, you can upload, change and delete images as you like for better vizualisation.
+this folder contains all used images on the interface + a zip folder that contains even more images, 
+you can upload, change and delete images as you like for better vizualisation.
